--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "@types/googlemaps": "^3.40.3",
+    "angularx-qrcode": "^10.0.11",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "lottie-web": "^5.7.4",
