--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
+    "@types/crypto-js": "^4.0.1",
     "@types/googlemaps": "^3.40.3",
     "angularx-qrcode": "^10.0.11",
     "bootstrap": "^4.5.3",
+    "crypto-js": "^4.0.0",
     "font-awesome": "^4.7.0",
     "lottie-web": "^5.7.4",
     "ngx-lottie": "^6.4.0",
